# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import jobsRouter from "./jobs";
+import applicationsRouter from "./applications";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(jobsRouter);
+router.use(applicationsRouter);
+router.use(adminRouter);
 
 export default router;
